Bug 125730 - EDITING: Impress: Shadow has the same color as the hatching fill
Summary: EDITING: Impress: Shadow has the same color as the hatching fill
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium minor
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-06-06 07:48 UTC by Andrés Maldonado
Modified: 2019-06-13 13:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (159.09 KB, image/png)
2019-06-06 07:51 UTC, Andrés Maldonado
Details
6.3_bibisect.log (2.36 KB, text/x-log)
2019-06-06 07:54 UTC, Andrés Maldonado
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrés Maldonado 2019-06-06 07:48:11 UTC
Description:
When editing a presentation and inserting a shape (Rectangle, Ellipse...) with a hatching fill and a shadow, the shadow has the same color as the hatching fill.

Steps to Reproduce:
1. Open a new presentation
2. Create an Ellipse
3. On Properties > Area > Fill select Hatching
4. Select Blue Triple 90 Degrees as hatching
4. On Properties > Shadow check the Enable box

Actual Results:
The shadow has the same color as the hatching fill (blue).

Expected Results:
The shadow should be gray.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Reproducible in

Version: 6.4.0.0.alpha0+
Build ID: e4be4c2641c0072af25cf1a2b2abc3b1cffa1078
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

I made a bibisect on branch 6.3 and found that the first bad commit is 5c234592 (https://gerrit.libreoffice.org/#/c/68807/)
Comment 1 Andrés Maldonado 2019-06-06 07:51:18 UTC
Created attachment 151952 [details]
Screenshot
Comment 2 Andrés Maldonado 2019-06-06 07:54:17 UTC
Created attachment 151953 [details]
6.3_bibisect.log
Comment 3 Xisco Faulí 2019-06-10 14:04:56 UTC
Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: 43ddddb703bcdb9430752af63ae46527f737f874
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Andrés, Do you plan to fix this issue ?
Comment 4 Xisco Faulí 2019-06-10 14:34:45 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/73762/. Taking...
Comment 5 Commit Notification 2019-06-10 16:19:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d85499381177bbd050ed85f66f4386d5f41db237%5E%21

tdf#125730: Shadow has the same color as the hatching fill

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-06-11 07:26:39 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/70d68e96d1eb7d638cd8dc1aa25401efc88eb6cb%5E%21

tdf#125730: Shadow has the same color as the hatching fill

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Andrés Maldonado 2019-06-13 13:07:08 UTC
@Xisco, sorry, I didn't have time to address the issue, thanks for fixing it !

I found and fixed a related issue (when going full screen). I will submit shortly a bug report and a patch.