tdf#125730: Shadow has the same color as the hatching fill

Regression from 5c23459245f566831383934dd64d19e002bfcfcb

If statement was removed while getOptionsDrawinglayer().IsAntiAliasing()
condition still stands

Change-Id: I33baf1975436d0f917d14bf5df8232dafba92793
Reviewed-on: https://gerrit.libreoffice.org/73762
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit d85499381177bbd050ed85f66f4386d5f41db237)